Fix for the answer button overflow, removal of old comments

--- a/css/style.css
+++ b/css/style.css
@@ -220,10 +220,12 @@ button {
 
 	text-shadow: 0px 2px 6px rgba(80, 90, 220, 0.7);
 
-	font-size: 2em;
+	font-size: 1.5rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+
+	overflow: hidden;
 }
 
 .answerButton img {
